# projeto-sia

./: README.md
projeto-sia/: DECISIONS.md  Makefile  app.py  pyproject.toml
projeto-sia/data/: latest.csv  news.csv
projeto-sia/src/: __init__.py  cli.py
projeto-sia/src/coleta/: __init__.py  coleta.py
projeto-sia/src/lexicons/: __init__.py  lexicons.py
projeto-sia/src/processamento/: __init__.py  processamento.py
projeto-sia/src/tests/: test_processamento.py
projeto-sia/src/utils/: __init__.py  utils.py
projeto-sia/src/viz/: __init__.py  viz.py
